bin_PROGRAMS = hfst-proc

hfst_proc_SOURCES = hfst-proc.cc formatter.cc lookup-path.cc lookup-state.cc tokenizer.cc transducer.cc applicators.cc flag-diacritics.cc
noinst_HEADERS = hfst-proc.h formatter.h lookup-path.h lookup-state.h tokenizer.h transducer.h buffer.h applicators.h flag-diacritics.h

